Fix rendering of "Download stats" button on Campaign overview
For a Campaign with more than the minimum details in the Details section, and/or content in the Program Template section, the server-rendered elements were covering up the "Download stats" button. This change puts the button above all the details, immediately below the stats. Not ideal, perhaps, but it's a quick fix for the problem.

--- a/app/assets/stylesheets/modules/_campaign.styl
+++ b/app/assets/stylesheets/modules/_campaign.styl
@@ -74,29 +74,5 @@
       font-weight 600
 
 .high-modal
-  position absolute
-  top 540px
-  right 18%
-
-  +below(1090px)
-    top 620px
-    right 17%
-
-  +below(desktop)
-    top 1050px
-    left 2%
-
-  +below(836px)
-    top 1120px
-
-  +below(584px)
-    top 1270px
-
-  +below(420px)
-    top 1400px
-    left 3%
-
-  +above(1300px)
-    top 530px
-    right 18%
+  float right
 
